--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>DWEC - Alvaro Leiva</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="estilos.css" />
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 
 <body>
