--- a/tema2/ejercicios1a7/index.html
+++ b/tema2/ejercicios1a7/index.html
@@ -29,6 +29,12 @@
     <br>
     <div class="lista">
         <ul>
+            <li><a href="../../index.html" target="_blank">Volver al inicio</a><br></li>
+        </ul>
+    </div>
+    <br>
+    <div class="lista">
+        <ul>
             <li><a href="http://www.iesgrancapitan.org" target="_blank">IES Grán Capitán</a><br></li>
             <li><a href="mailto:alvarooleto@gmail.com">Contacto</a><br></li>
         </ul>
