--- a/tema3/probandoArrays/index.html
+++ b/tema3/probandoArrays/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>DWEC - Alvaro Leiva</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/estilos.css" />
 </head>
 
 <body>
@@ -16,18 +16,16 @@
     </center>
     <div class="lista">
         <ul>
-            <p class="introduccion">Tema 2 - Vanilla JS: JavaScript</p>
-            <li><a href="tema2/ejercicios1a7/index.html">Ejercicios 1 - 7</a></li>
-            <li><a href="tema2/ejercicios8a10/index.html">Ejercicios 8 - 10</a></li>
-            <li><a href="tema2/ejercicios11a13/index.html">Ejercicios 11 - 13</a></li>
-            <li><a href="tema2/ejercicios14a17/index.html">Ejercicios 14 - 17</a></li>
-        </ul>
-    </div>
-    <br>
-    <div class="lista">
-        <ul>
-            <p class="introduccion">Tema 3 - Objetos predefinidos en JS</p>
-            <li><a href="tema3/probandoArrays/index.html">Probando Arrays</a></li>
+            <p class="introduccion">Probando Arrays</p>
+            <li><a href="parte1/parte1.html">Ejercicios 1</a></li>
+            <li><a href="parte2/parte2.html">Ejercicios 2</a></li>
+            <li><a href="parte3/parte3.html">Ejercicios 3</a></li>
+            <li><a href="parte4/parte4.html">Ejercicios 4</a></li>
+            <li><a href="parte5/parte5.html">Ejercicios 5</a></li>
+            <li><a href="parte6/parte6.html">Ejercicios 6</a></li>
+            <li><a href="parte7/parte7.html">Ejercicios 7</a></li>
+            <li><a href="parte8/parte8.html">Ejercicios 8</a></li>
+            <li><a href="parte9/parte9.html">Ejercicios 9</a></li>
         </ul>
     </div>
     <br>
