--- a/tema3/listadoVentanas/index.html
+++ b/tema3/listadoVentanas/index.html
@@ -16,16 +16,9 @@
     </center>
     <div class="lista">
         <ul>
-            <p class="introduccion">Listado Arrays</p>
-            <li><a href="parte1/parte1.html">Ejercicios 1</a></li>
-            <li><a href="parte2/parte2.html">Ejercicios 2</a></li>
-            <li><a href="parte3/parte3.html">Ejercicios 3</a></li>
-            <li><a href="parte4/parte4.html">Ejercicios 4</a></li>
-            <li><a href="parte5/parte5.html">Ejercicios 5</a></li>
-            <li><a href="parte6/parte6.html">Ejercicios 6</a></li>
-            <li><a href="parte7/parte7.html">Ejercicios 7</a></li>
-            <li><a href="parte8/parte8.html">Ejercicios 8</a></li>
-            <li><a href="parte9/parte9.html">Ejercicios 9</a></li>
+            <p class="introduccion">Listado Ventanas</p>
+            <li><a href="parte1/index.html">Parte 1</a></li>
+            <li><a href="parte2/index.html">Parte 2</a></li>
         </ul>
     </div>
     <br>
