pequeñas modificaciones en listado de window y screen

--- a/tema3/listadoWindowYScreen/parte1/index.html
+++ b/tema3/listadoWindowYScreen/parte1/index.html
@@ -22,6 +22,7 @@
     <noscript>
         <p>JavaScript está deshabilitado. Es posible que la página no se visualice correctamente.</p>
     </noscript>
+    <div id="paco"></div>
     <!--<p id="info"></p>-->
     <!--<p>Pulsa F12 para abrir la consola.</p>-->
     <footer>Autor: Álvaro Leiva Toledano</footer>
