--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     <br>
     <div class="lista">
         <ul>
+            <p class="introduccion">Tema 4 - Funciones, «arrays», y objetos definidos por el usuario en JS</p>
+            <li><a href="tema4/calculadora/index.html">Calculadora</a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="lista">
+        <ul>
             <li><a href="http://www.iesgrancapitan.org" target="_blank">IES Grán Capitán</a><br></li>
             <li><a href="mailto:alvarooleto@gmail.com">Contacto</a><br></li>
         </ul>
