--- a/tema4/calculadora/index.html
+++ b/tema4/calculadora/index.html
@@ -1,20 +1,11 @@
-<!--
-    Con altura. Muestra en una lista la siguiente información.
-    Cada uno de las etiquetas <ol> y <li> han de crearse mediante los métodos de document.
-    Explica en cada uno la diferencia con respecto a los demás.
-    window.outerHeight
-    window.innerHeight
-    window.screen.availHeight
-    window.screen.height
-    @author: Alvaro Leiva Toledano
--->
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html" />
-    <title>Parte 1 - Window y screen</title>
+    <title>Calculadora</title>
+    <link rel="stylesheet" href="estilos.css">
     <script type="text/javascript" src="codigo.js"></script>
 </head>
 
@@ -22,7 +13,7 @@
     <noscript>
         <p>JavaScript está deshabilitado. Es posible que la página no se visualice correctamente.</p>
     </noscript>
-    <!--<p id="info"></p>-->
+    <!--<div id="calculadora"></div>-->
     <!--<p>Pulsa F12 para abrir la consola.</p>-->
     <footer>Autor: Álvaro Leiva Toledano</footer>
 </body>
