--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <ul>
             <p class="introduccion">Tema 4 - Funciones, «arrays», y objetos definidos por el usuario en JS</p>
             <li><a href="tema4/calculadora/index.html">Calculadora</a></li>
+            <li><a href="tema4/lindogatito/index.html">Lindo gatito</a></li>
         </ul>
     </div>
     <br>
