Corrección parte 4 de probando arrays - tema 3

--- a/tema3/probandoArrays/parte4/parte4.html
+++ b/tema3/probandoArrays/parte4/parte4.html
@@ -10,7 +10,6 @@
 <head>
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <title>Probando los Arrays - Parte 4</title>
-    <link rel="stylesheet" type="text/css" href="estilos.css">
     <script type="text/javascript" src="codigo4.js"></script>
 </head>
 
@@ -18,6 +17,10 @@
     <noscript>
         <p>JavaScript está deshabilitado. Es posible que la página no se visualice correctamente.</p>
     </noscript>
+
+    <label for="numero">Escoge la dimensión del array.</label>
+    <input type="number" id="num"></input>
+    <button id="boton">Confirmar</button>
 
     <p id="info"></p>
     <!--<p>Pulsa F12 para abrir la consola.</p>-->
