--- a/tema3/probandoArrays/parte2/parte2.html
+++ b/tema3/probandoArrays/parte2/parte2.html
@@ -8,9 +8,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="UTF-8" http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta charset="UTF-8" http-equiv="Content-Type" content="text/html" />
     <title>Probando los Arrays - Parte 2</title>
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css">
     <script type="text/javascript" src="codigo2.js"></script>
 </head>
 
