--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="tema3/probandoArrays/index.html">Listado Arrays</a></li>
             <li><a href="tema3/listadoVentanas/index.html">Listado Ventanas</a></li>
             <li><a href="tema3/listadoWindowYScreen/index.html">Listado Window y Screen</a></li>
+            <li><a href ="tema3/listadoStringRegexpNumber/index.html">Listado String, Regexp y Number</li>
         </ul>
     </div>
     <br>
@@ -38,6 +39,12 @@
             <p class="introduccion">Tema 4 - Funciones, «arrays», y objetos definidos por el usuario en JS</p>
             <li><a href="tema4/calculadora/index.html">Calculadora</a></li>
             <li><a href="tema4/lindogatito/index.html">Lindo gatito</a></li>
+        </ul>
+    </div>
+    <div class="lista">
+        <ul>
+            <p class="introduccion">Exámenes</p>
+            <li><a href="examen1/index.html">Examen 1 - UD 1, 2, 3, 4 - Diciembre 2019</a></li>
         </ul>
     </div>
     <br>
