--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="tema3/probandoArrays/index.html">Listado Arrays</a></li>
             <li><a href="tema3/listadoVentanas/index.html">Listado Ventanas</a></li>
             <li><a href="tema3/listadoWindowYScreen/index.html">Listado Window y Screen</a></li>
-            <li><a href ="tema3/listadoStringRegexpNumber/index.html">Listado String, Regexp y Number</li>
+            <li><a href ="tema3/listadoStringRegexpNumber/index.html">Listado String, Regexp y Number</a></li>
         </ul>
     </div>
     <br>
